// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NextPiece render T  1`] = `
<div
  className="sc-gsTCUz fRGtiv"
>
  <div
    className="sc-dlfnbm eTjct"
  >
    Next
  </div>
  <div
    className="sc-eCssSg llVYFN"
  >
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
    <div
      className="sc-jSgupP bHuCod"
      color="0, 0, 0"
      type={0}
    />
  </div>
</div>
`;

exports[`NextPiece render test  1`] = `
<div
  className="sc-gsTCUz fRGtiv"
>
  <div
    className="sc-dlfnbm eTjct"
  >
    Next
  </div>
  <div
    className="sc-eCssSg llVYFN"
  />
</div>
`;
